fix spilling text

--- a/src/DeleteListPopup.css
+++ b/src/DeleteListPopup.css
@@ -8,9 +8,10 @@
 }
 
 .delete-explanation {
-  width: 200px;
+  width: 300px;
 }
 
 .delete-list-name {
   max-width: 80vw;
+  word-wrap: break-word;
 }
